--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,12 @@
         min-height: auto;
       }
       #cabeçalhoredondo {
-        bottom: -50px; /* Ajusta para telas menores */
+        top: 80px; /* Ajusta para telas menores */
+      }
+      #cabeçalhoredondo img {
+      width: 80px;
+      height: 80px;
+     
       }
       .product-grid {
         padding: 10px;
@@ -160,7 +165,7 @@
         align-items: center;
       }
       .product-card {
-        width: 100%;
+        width: 90%;
         max-width: 300px;
       }
       .purchase-container input {
