--- a/public/index.html
+++ b/public/index.html
@@ -111,10 +111,14 @@
       height: auto;
       margin: auto;
     }
+    
     .copy-info {
       font-size: 14px;
       color: #fff;
       margin-top: 10px;
+      word-wrap: break-word;
+      overflow-wrap: break-word;
+      white-space: normal;
     }
     .confirmation-text {  
       font-size: 14px;
